--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 
 * Make request/response objects thread-local to prepare for a realistic server environment.
 
-* Clean up/improve debugmiddleware, add option to switch it out with another.
+* sessions/authentication/cookies
+
